--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <title>Hello</title>
+    <style>
+      h1 {
+        color: red;
+      }
+      h2 {
+        color: blue;
+      }
+    </style>
   </head>
   <body>
-    <h1 style="color: blue">Welcome to my Website!!</h1>
+    <h1>Welcome to my Website!!</h1>
     <h2>Hello Again</h2>
     Hello, world!
   </body>
